# coord-dsl

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
examples/models/fsm/: CMakeLists.txt  ex_fsm.hpp  ex_fsm.json  ex_fsm.py  example.fsm  find-unscrew-fsm.hpp  find-unscrew.fsm  generated_fsm_bhv.py  test_fsm.cpp
models/fsm/: example.fsm  example.fsm.hpp
src/coord_dsl/: __init__.py
src/coord_dsl/generators/: classes.py  common.py  fsm_gen.py  fsm_graph.py  registration.py
src/coord_dsl/metamodels/: fsm.tx
src/coord_dsl/models/: program.fsm  program.fsm.hpp  program.fsm.json
src/coord_dsl/templates/: fsm.hpp.jinja2  fsm.py.jinja2
