[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coord_dsl"
version = "0.0.1"
authors = [
    { name="Minh Nguyen", email="minh@mail.minhnh.com" }
]
description = """
A Domain-Specific Language (DSL) to execute simple coordination models.
"""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
  'numpy',
  'rdflib',
  'pyld',
  'pyshacl',
  'jinja2',
  'py_trees',
]

[project.urls]
"Homepage" = "https://github.com/minhnh/coord-dsl"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
