[project]
name = "coord_dsl"
version = "0.1.0"
description = "A Domain-Specific Language (DSL) to execute simple coordination models."
authors = [{ name = "", email = "vamsi.kalagautur@uni-bremen.de" }]
license = { text = "MIT" }
keywords = [""]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "textX>=4.1.0",
    "textx_ls_core"
]

[project.urls]
"Homepage" = "https://github.com/secorolab/coord-dsl.git"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"coord_dsl" = [
    "metamodels/*.tx",
    "templates/*.jinja2"
]

[project.entry-points."textx_languages"]
"fsm" = "coord_dsl.generators.registration:fsm_lang"

[project.entry-points."textx_generators"]
"fsm_graph_console" = "coord_dsl.generators.registration:fsm_console_gen"
"fsm_graph_file" = "coord_dsl.generators.registration:fsm_file_gen"
"fsm_cpp" = "coord_dsl.generators.registration:fsm_cpp_gen"
"fsm_python" = "coord_dsl.generators.registration:fsm_python_gen"

[ruff]
line-length = 100

